--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:autofix": "eslint --ext .js,.vue,.gql --fix --ignore-path .gitignore .",
     "stylelint": "stylelint '**/*.{css,vue}",
     "stylelint:autofix": "stylelint '**/*.{css,vue}' --fix",
+    "lint:all": "npm run lint && npm run stylelint",
     "lint:all:autofix": "npm run lint:autofix && npm run stylelint:autofix",
     "test": "jest"
   },
